--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>News, Recipes, Fitness Tips in Nepali & English | Current Affairs, News Headline, Facts | Saarans</title>
     <meta name="description"
-        content="Explore latest news, updates on sports, current affairs and topics from recipes to fashion and beauty in Nepali and English in just 30 seconds.">
+        content="Explore latest news, and get updated on sports, current affairs and topics from recipes to fashion and beauty in just 30 seconds.">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
